# safeintegral

./: CMakeFlags.txt  CMakeLists.txt  README.md
catch/: CMakeLists.txt
cmake/: Findcatch.cmake  GCC_FLAGS.cmake  MSVC_FLAGS.cmake
safeintegral/: errors.hpp  safeintegral.hpp  safeintegralop.hpp  safeintegralop2.hpp  safeintegralop_cmp.hpp
test/: testlongint.cpp
